--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 
+# adjust URL base path
+server.servlet.context-path=/calender/api/v1
+
+# settings for the database
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/Calender?createDatabaseIfNotExist=true&serverTimezone=UTC&useUnicode=yes&characterEncoding=UTF-8
+# MariaDB username and PW
+spring.datasource.username=root
+spring.datasource.password=root
+# delete database content before application shutdown (useful for testing)
+# spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDB106Dialect
